--- a/src/components/CarTile/CarTile.css
+++ b/src/components/CarTile/CarTile.css
@@ -1,51 +1,66 @@
 .car-tile {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s, box-shadow 0.3s;
-    margin: 16px;
-    max-width: 300px;
-  }
-  
-  .car-tile:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  }
-  
-  .car-image-container {
+  flex: 1 1 calc(33.333% - 24px); /* Adjusted to account for the smaller gap */
+  width: calc(33.333% - 24px);
+  max-width: 300px;
+  margin: 6px; /* Reduced margin to decrease vertical spacing */
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+.car-tile:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.car-image-container {
+  width: 100%;
+  overflow: hidden;
+}
+.car-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensure image covers the container */
+}
+.car-details {
+  padding: 0px 16px 16px 16px;
+  background-color: #fff;
+  height: 40%; /* Adjust to ensure details container height is consistent */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.car-name {
+  font-size: 1.5em;
+  margin-bottom: 8px;
+  color: #333;
+}
+.car-details-text {
+  font-size: 1em;
+  margin-bottom: 8px; /* Adjust margin for consistency */
+  color: #666;
+}
+.car-price {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #007bff;
+  margin-bottom: 8px; /* Add margin to separate price and button */
+}
+.view-details-button {
     width: 100%;
-    overflow: hidden;
-  }
-  
-  .car-image {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
-  
-  .car-details {
-    padding: 16px;
-    background-color: #fff;
-  }
-  
-  .car-name {
-    font-size: 1.5em;
-    margin-bottom: 8px;
-    color: #333;
-  }
-  
-  .car-details-text {
-    font-size: 1em;
-    margin-bottom: 16px;
-    color: #666;
-  }
-  
-  .car-price {
-    font-size: 1.2em;
-    font-weight: bold;
-    color: #007bff;
-  }
-  
+  margin-top: 8px;
+  padding: 10px 20px;
+  background-color:#E5E5E5;
+  color: black;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  align-self: center; /* Ensure the button stays aligned */
+}
+.view-details-button:hover {
+  background-color: #E5E5E5;
+}
