--- a/src/components/CarTile/CarTile.css
+++ b/src/components/CarTile/CarTile.css
@@ -1,8 +1,8 @@
 .car-tile {
-  flex: 1 1 calc(33.333% - 24px); /* Adjusted to account for the smaller gap */
+  flex: 1 1 calc(33.333% - 24px); 
   width: calc(33.333% - 24px);
   max-width: 300px;
-  margin: 6px; /* Reduced margin to decrease vertical spacing */
+  margin: 6px; 
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -16,41 +16,41 @@
   transform: translateY(-5px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
-.car-image-container {
+.cartile-image-container {
   width: 100%;
   overflow: hidden;
 }
-.car-image {
+.cartile-image {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Ensure image covers the container */
+  object-fit: cover; 
 }
-.car-details {
+.cartile-details {
   padding: 0px 16px 16px 16px;
   background-color: #fff;
-  height: 40%; /* Adjust to ensure details container height is consistent */
+  height: 40%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-.car-name {
+.cartile-name {
   font-size: 1.5em;
   margin-bottom: 8px;
   color: #333;
 }
-.car-details-text {
+.cartile-details-text {
   font-size: 1em;
-  margin-bottom: 8px; /* Adjust margin for consistency */
+  margin-bottom: 8px; 
   color: #666;
 }
-.car-price {
+.cartile-price {
   font-size: 1.2em;
   font-weight: bold;
   color: #007bff;
-  margin-bottom: 8px; /* Add margin to separate price and button */
+  margin-bottom: 8px; 
 }
 .view-details-button {
-    width: 100%;
+  width: 100%;
   margin-top: 8px;
   padding: 10px 20px;
   background-color:#E5E5E5;
@@ -59,7 +59,7 @@
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s;
-  align-self: center; /* Ensure the button stays aligned */
+  align-self: center;
 }
 .view-details-button:hover {
   background-color: #E5E5E5;
